[gd_scene load_steps=8 format=2]

[ext_resource path="res://pause/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/vikingHell_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://buttons/resumeButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://buttons/optionsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://buttons/mainMenuButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://effects/flame_selector.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/select2.wav" type="AudioStream" id=7]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0470588, 0.0470588, 0.0470588, 0.494118 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.807843, 0.262745, 0.262745, 1 )
custom_colors/font_color_shadow = Color( 0.541176, 0.0470588, 0.0470588, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 2
text = "PAUSE"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 460.0
margin_top = 298.0
margin_right = 820.0
margin_bottom = 422.0
alignment = 1

[node name="Resume" parent="CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 360.0
margin_bottom = 60.0

[node name="OptionsButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
visible = false
margin_top = 64.0
margin_right = 360.0
margin_bottom = 124.0

[node name="MainMenuButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 64.0
margin_right = 360.0
margin_bottom = 124.0

[node name="Selector1" parent="." instance=ExtResource( 6 )]
margin_left = 379.185
margin_top = 287.427
margin_right = 449.706
margin_bottom = 354.427

[node name="Selector2" parent="." instance=ExtResource( 6 )]
visible = false
margin_left = 381.184
margin_top = 321.709
margin_right = 452.184
margin_bottom = 388.709

[node name="Selector3" parent="." instance=ExtResource( 6 )]
margin_left = 377.987
margin_top = 352.854
margin_right = 452.345
margin_bottom = 419.854

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 6.0
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_focus_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_focus_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_focus_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
